matcher: Fix memory leak

Don't leak the GValueArray.

https://bugzilla.gnome.org/show_bug.cgi?id=790539
(cherry picked from commit dda73cc07250ea324b4227907197c39b93fcd365)